cabal-version:       2.2

name:                aster-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aster-project#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable aster-project
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Aster.AST
                       Aster.Parser
                       Aster.Renderer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       megaparsec,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/aster-project
