cabal-version:       2.2

name:                aster-project
version:             0.1.0.0
-- synopsis:         Aster: A simple HTML generator language
-- description:      A small domain-specific language (DSL) for generating HTML. 
homepage:            https://github.com/setohirox/Aster
license:             BSD-3-Clause
license-file:        LICENSE
author:              setohirox
maintainer:          hiro.premium@icloud.com
copyright:           2025 setohirox
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable aster-project
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Aster.AST
                       Aster.Parser
                       Aster.Renderer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       filepath,
                       megaparsec,
                       text
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/setohirox/Aster
